--- a/packages/realitychain-webapp/src/components/World.css
+++ b/packages/realitychain-webapp/src/components/World.css
@@ -2,7 +2,7 @@
   border: 1px solid black;
   border-radius: 8px;
   padding: 30px;
-  height: 24rem;
+  min-height: 24rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -13,7 +13,7 @@
 .col1 {
   border: 1px solid black;
   border-radius: 8px;
-  height: 24rem;
+  min-height: 24rem;
   text-align: left;
   padding: 30px;
 }
